<resources>
    <string name="app_name">Zippympv</string>


    <string-array name="roles1">
        <item>Select a role</item>
        <item>Item1</item>
        <item>Item2</item>
        <item>Item3</item>
        <item>Item4</item>
        <item>Item5</item>
    </string-array>

    //for dotIndicatorr
    <attr name="dampingRatio" format="float" />
    <attr name="dotsClickable" format="boolean" />
    <attr name="dotsColor" format="color" />
    <attr name="dotsCornerRadius" format="dimension" />
    <attr name="dotsSize" format="dimension" />
    <attr name="dotsSpacing" format="dimension" />
    <attr name="dotsStrokeColor" format="color" />
    <attr name="dotsStrokeWidth" format="dimension" />
    <attr name="dotsWidthFactor" format="float" />
    <attr name="progressMode" format="boolean" />
    <attr name="selectedDotColor" format="color" />
    <attr name="stiffness" format="float" />

    <declare-styleable name="DotsIndicator">
        <attr name="dotsColor" />
        <attr name="selectedDotColor" />
        <attr name="dotsSize" />
        <attr name="dotsWidthFactor" />
        <attr name="dotsSpacing" />
        <attr name="dotsCornerRadius" />
        <attr name="progressMode" />
        <attr name="dotsClickable" />
        <attr name="dotsElevation" format="dimension" />
    </declare-styleable>
    <declare-styleable name="SpringDotsIndicator">
        <attr name="dotsColor" />
        <attr name="dotsSize" />
        <attr name="dotsSpacing" />
        <attr name="dotsCornerRadius" />
        <attr name="dotsStrokeWidth" />
        <attr name="dotsStrokeColor" />
        <attr name="stiffness" />
        <attr name="dampingRatio" />
        <attr name="dotsClickable" />
    </declare-styleable>
    <declare-styleable name="WormDotsIndicator">
        <attr name="dotsColor" />
        <attr name="dotsSize" />
        <attr name="dotsSpacing" />
        <attr name="dotsCornerRadius" />
        <attr name="dotsStrokeWidth" />
        <attr name="dotsStrokeColor" />
        <attr name="dotsClickable" />
    </declare-styleable>


    <declare-styleable name="DateRangeMonthView">
        <attr format="color" name="title_color"/>
        <attr format="color" name="week_color"/>
        <attr format="color" name="range_color"/>
        <attr format="color" name="selected_date_circle_color"/>
        <attr format="color" name="selected_date_color"/>
        <attr format="color" name="default_date_color"/>
        <attr format="color" name="range_date_color"/>
        <attr format="color" name="disable_date_color"/>
        <attr format="boolean" name="enable_time_selection"/>
        <attr format="dimension" name="text_size_title"/>
        <attr format="dimension" name="text_size_week"/>
        <attr format="dimension" name="text_size_date"/>
        <attr format="integer" name="header_bg"/>
        <attr format="string" name="calendar_tag"/>
        <attr format="integer" name="week_offset"/>
        <attr format="boolean" name="editable"/>
        <attr format="enum" name="date_selection_mode">
            <enum name="free_range" value="0"/>
            <enum name="single" value="1"/>
            <enum name="fixed_range" value="2"/>
        </attr>
    </declare-styleable>

    <string name="slider1">We will get you back on the road. From breakdown location to your destination Our zippy Heroes are here to help</string>
    <string name="slider1Title1">Connecting you</string>
    <string name="slider1Title2">with a hero</string>

    <string name="slider2">Get more customers! Get more income! Get Zippy!</string>
    <string name="slider2Title1">Service Providers</string>
    <string name="slider2Title2">Become a HERO!</string>

    <string name="slider3">Drive to earn more. Drive to be Independent. Drive to make a difference. Drive with Zippy!</string>
    <string name="slider3Title1">Gig Workers</string>
    <string name="slider3Title2">Become a HERO!</string>

    <string name="slider4">If you are looking for any ads in particular Goshbezang is available to help</string>
    <string name="sliderTitle4">Listenning</string>
    <string name="slider5">Pedpo is here to keep you posted on the latest ads in other websites and applications</string>
    <string name="sliderTitle5">Global in Pedpo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
<!--    <string name="forgot_password">Forgot Password</string>-->
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="or_sign_in_with">or Sign in with</string>
    <string name="i_need_help_now">I Need Help Now</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="which_role_are_you_signing_up_as">Which role are you signing up as?</string>
    <string name="which_role_are_you_logging_ina_as">Which role are you logging in as?</string>
    <string name="who_is_logging_in">Who is logging in?</string>
    <string name="sign_up_for_zippy">Sign up for Zippy</string>
    <string name="get_started">GET STARTED</string>
    <string name="start_over"><u>Start over.</u></string>
    <string name="wrong_identity">Wrong identity?</string>
    <string name="txt"><![CDATA[Your <Social> account <Name of Person> will be connected tou your new zippy account]]></string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="terms_of_condition">By Creating an account , you agree to our <u>Terms and Conditions</u> , and our <u>Privacy Policy</u></string>
    <string name="receive_marketing_email_information">Receive marketing email information</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="pre_poluated_name"><![CDATA[<Pre-poluated Name>]]></string>
    <string name="pre_poluated_email"><![CDATA[<Pre-poluated Email>]]></string>
    <string name="welcome">Welcome!</string>
    <string name="profile">Profile</string>
    <string name="let_s_create_your">Let\'s create your</string>
    <string name="create_profile">Create Profile</string>
    <string name="let_s_get_better">Let\'s get to know you better!</string>
    <string name="upload_image">Upload Image</string>
    <string name="add_other_users">Add other users</string>
    <string name="invite_pepole_for_use_our_help">Invite pepole for use our help</string>
    <string name="invite_user">Invite User</string>
    <string name="next">Next</string>
    <string name="finish_later">Finish Later</string>


</resources>